k3s/backend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: nimblelink
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nimblelink
      tier: backend
  template:
    metadata:
      labels:
        app: nimblelink
        tier: backend
    spec:
      containers:
      - name: backend
        image: namtx/nimblelink-backend:latest
        ports:
        - containerPort: 8080
