k3s/backend/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: namtx.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: backend-service
          servicePort: 80
  tls:
  - hosts:
    - namtx.dev
    secretName: namtx-dev-letsencrypt-tls
